tests/ui/generics/issue-95208-ignore-qself.stderr
error: expected `:` followed by trait or lifetime
  --> $DIR/issue-95208-ignore-qself.rs:6:88
   |
LL | impl<T: Iterator> Struct<T> where <T as std:: iter::Iterator>::Item:: std::fmt::Display {
   |                                                                                        ^
   |
help: use single colon
   |
LL - impl<T: Iterator> Struct<T> where <T as std:: iter::Iterator>::Item:: std::fmt::Display {
LL + impl<T: Iterator> Struct<T> where <T as std:: iter::Iterator>::Item: std::fmt::Display {
   |

error: aborting due to 1 previous error

